fix: .remoteが花びらより後ろにあったのでz-indexを修正

--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,7 @@ img {
         position: absolute;
         bottom: 0;
         left: -50px;
-        z-index: 3;
+        z-index: 102;
         width: 50px;
         height: 100px;
         background-color: #fff;
@@ -46,7 +46,7 @@ img {
         position: absolute;
         bottom: -50px;
         left: 0px;
-        z-index: 3;
+        z-index: 102;
         width: 110px;
         height: 50px;
         background-color: #fff;
@@ -55,7 +55,7 @@ img {
         position: absolute;
         bottom: -25px;
         left: 1px;
-        z-index: 2;
+        z-index: 100;
         width: 120px;
         height: 150px;
         text-align: center;
